fixed horizontal scroll mobile view in CarDetails

--- a/src/styles/Filter.Module.css
+++ b/src/styles/Filter.Module.css
@@ -13,7 +13,6 @@
   padding-right: 10px;
 }
 
-
 @media (min-width: 768px) {
   .row .col-md-1,
   .row .col-sm-1,
@@ -40,3 +39,11 @@
     *width: 14.285714285714285714285714285714%;
   }
 }
+
+
+/*
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }*/
